<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/delete_btn"
        android:layout_width="149dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:text="@string/delete_btn"
        app:layout_constraintEnd_toStartOf="@+id/update_btn"
        app:layout_constraintHorizontal_bias="0.654"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_btn" />

    <Button
        android:id="@+id/update_btn"
        android:layout_width="149dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:text="@string/update_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_btn" />

    <Button
        android:id="@+id/add_btn"
        android:layout_width="149dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/add_btn"
        app:layout_constraintEnd_toStartOf="@+id/signin_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectall_btn" />

    <Button
        android:id="@+id/signin_btn"
        android:layout_width="149dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:text="@string/signin_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectall_btn" />

    <TextView
        android:id="@+id/username_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="68dp"
        android:text="@string/username_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/nam_Value"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/username_txt"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/password_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/password_value"
        android:inputType="textPassword"
        app:layout_constraintBaseline_toBaselineOf="@+id/password_txt"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/password_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:text="@string/password_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_txt" />

    <Button
        android:id="@+id/selectall_btn"
        android:layout_width="149dp"
        android:layout_height="50dp"
        android:layout_marginTop="89dp"
        android:text="@string/selectall_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_value" />
</androidx.constraintlayout.widget.ConstraintLayout>